<resources>
    <string name="app_name">AbsentM</string>
    <string name="logo_text">勇敢做自己, @AbsentM </string>

    <!--XListView string res-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!--PhotoView string res-->
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>

    <string name="action_settings">Settings</string>
    <string name="action_star">Star</string>
    <string name="date_format">EEE,  MMM d,  yyyy</string>

    <string name="fore_color">前景色</string>
    <string name="back_color">背景色</string>
    <string name="custom_define">自定义</string>
    <string name="colors">颜色</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="restore">恢复默认</string>
    <string name="reset_logo_color">重置Logo、前景色、背景色？</string>
    <string name="help_str">
        一款基于Android传统的MVC技术的个人APP， 包含四个主要页面：\n\nHome页面：数据来源知乎日报，自动解析；\n社区页面：后端采用Bmob存储数据；\n发现页面：使用一些第三方库实现一些小功能；\n我的页面：实现一个完整的个人用户系统功能。\n\n代码已开源：https://github.com/absentm/myapplication
    </string>
    <string name="used_libs_str">
        #特别感谢这些开源库的作者#\n\ncom.android.support:appcompat-v7:23.1.1\ncom.android.support:design:23.1.1\ncn.bmob.android:bmob-sdk:3.5.1\ncn.bmob.android:bmob-push:0.6\ncn.bmob.android:bmob-sms:1.0.1\ncom.github.chrisbanes:PhotoView:1.3.0\ncom.github.sd6352051:android-image-picker:v1.0.1\norg.greenrobot:eventbus:3.0.0\ncom.android.support:cardview-v7:23.+\ncom.afollestad.material-dialogs:commons:0.9.0.1\ncom.daimajia.numberprogressbar:library:1.2@aar\nme.yokeyword:indexablerecyclerview:1.0.5\nde.hdodenhof:circleimageview:2.1.0
    </string>
</resources>
