<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bantuming">

    <RelativeLayout
        android:id="@+id/showallphoto_headview"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/teal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/showallphoto_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/album"
            android:textColor="#fff"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/showallphoto_headtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/photo"
            android:textColor="#ffffff"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/showallphoto_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:text="@string/camera_cancel"
            android:textColor="#fff"
            android:textSize="16dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/showallphoto_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/teal">

        <TextView
            android:id="@+id/showallphoto_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/preview"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/showallphoto_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/unfinished"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </RelativeLayout>

    <GridView
        android:id="@+id/showallphoto_myGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/showallphoto_bottom_layout"
        android:layout_below="@id/showallphoto_headview"
        android:layout_centerInParent="true"
        android:background="@color/albumback"
        android:horizontalSpacing="2dp"
        android:numColumns="3"
        android:verticalSpacing="2dp"/>

    <ProgressBar
        android:id="@+id/showallphoto_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>